--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron": "^5.0.2"
   },
   "dependencies": {
-    "electron-reload": "^1.4.0"
+    "electron-reload": "^1.4.0",
+    "jquery": "^3.4.1"
   }
 }
