--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "electron-reload": "^1.4.0",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "jquery-bez": "^1.0.11"
   }
 }
