--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "electron": "^5.0.2"
   },
   "dependencies": {
-    "electron-reload": "^1.4.0",
-    "jquery": "^3.4.1",
-    "jquery-bez": "^1.0.11"
+    "electron-reload": "^1.4.0"
   }
 }
