add Foxhole Artillery website index.html

--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "build": {
     "appId": "com.xeniac.Foxhole Artillery",
     "win": {
-      "target": "nsis",
+      "target": "portable",
       "icon": "assets/images/icon.ico"
+    },
+    "portable": {
+      "artifactName": "FoxholeArtillery_portable.exe"
     }
   }
 }
